@@ -1,3 +1,6 @@
+    <!-- Datetimepicker -->
+    <script src="http://localhost/hmvc/admin/assets/frontend/vendors/moment/moment.js"></script>
+    <script src="<?php echo base_url()?>assets/frontend/vendors/bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
     <!-- Datatables -->
     <script src="<?php echo base_url()?>assets/frontend/vendors/datatables.net/js/jquery.dataTables.min.js"></script>
     <script src="<?php echo base_url()?>assets/frontend/vendors/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
@@ -11,12 +14,9 @@
     <script src="<?php echo base_url()?>assets/frontend/vendors/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
     <script src="<?php echo base_url()?>assets/frontend/vendors/datatables.net-responsive-bs/js/responsive.bootstrap.js"></script>
     <script src="<?php echo base_url()?>assets/frontend/vendors/datatables.net-scroller/js/dataTables.scroller.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
     <script src="<?php echo base_url()?>assets/frontend/vendors/jszip/dist/jszip.min.js"></script>
     <script src="<?php echo base_url()?>assets/frontend/vendors/pdfmake/build/pdfmake.min.js"></script>
     <script src="<?php echo base_url()?>assets/frontend/vendors/pdfmake/build/vfs_fonts.js"></script>
-    <!-- Datetimepicker -->
-    <script src="<?php echo base_url()?>assets/frontend/vendors/bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
     <!-- Select Bst -->
     <script src="<?php echo base_url()?>assets/frontend/vendors/bootstrap-select/js/bootstrap-select.min.js"></script>
     <!-- Numbers -->
