@@ -5,6 +5,9 @@
 	ADD COLUMN `CLIENT_LOCATION` CHAR(200) NULL DEFAULT NULL AFTER `CLIENT_PICNAME`,
 	ADD COLUMN `CLIENT_PHONE` CHAR(200) NULL DEFAULT NULL AFTER `CLIENT_LOCATION`,
 	ADD COLUMN `CLIENT_MAIL` CHAR(200) NULL DEFAULT NULL AFTER `CLIENT_PHONE`;
+- edit mona_history_client
+	ALTER TABLE `mona_history_client`
+	ADD COLUMN `HISCL_VALUE` DECIMAL(10,2) NULL DEFAULT NULL AFTER `HISCL_DATEEND`;
 13112018
 - Create tabel mona_client
 CREATE TABLE `mona_client` (
